--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,34 +4,96 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
+
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Stylesheet -->
+    <style type="text/tailwindcss">
+      @layer utilities {
+        .roboto {
+          font-family: "Roboto Mono", monospace;
+          font-optical-sizing: auto;
+          font-style: normal;
+        }
+      }
+    </style>
+
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/a0ef5908cc.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body>
-    <h2><%= title %></h2>
-    <a href="/">See all messages</a>
 
-    <hr />
-    <br />
+  <body
+    class="container mx-auto flex flex-col gap-8 px-3 roboto md:px-4 md:gap-12"
+  >
+    <header class="flex items-center justify-between h-20">
+      <h1 class="text-xl font-bold md:text-2xl"><%= title %></h1>
+      <a
+        href="/"
+        class="rounded-lg focus:outline focus:outline-2 focus:outline-blue-600 focus:outline-offset-2"
+      >
+        <button
+          tabindex="-1"
+          class="bg-blue-600 text-white text-sm rounded-lg size-10 transition duration-200 hover:bg-blue-500 focus:outline-0 md:px-6 md:h-12 md:w-auto"
+        >
+          <span class="hidden md:inline-block">See all messages</span>
+          <i class="fa-solid fa-list md:hidden"></i>
+        </button>
+      </a>
+    </header>
 
-    <form action="/new" method="post">
+    <form
+      action="/new"
+      method="post"
+      class="flex flex-col items-center gap-4 md:gap-6"
+    >
       <!-- Name -->
-      <div>
-        <label for="msg-author">Message Author</label>
-        <input id="msg-author" name="msgAuthor" type="text" placeholder="Enter name..." />
+      <div class="flex flex-col gap-2 w-full md:w-1/2">
+        <label for="msg-author" class="text-sm text-neutral-700"
+          >Message Author</label
+        >
+        <input
+          id="msg-author"
+          name="msgAuthor"
+          type="text"
+          placeholder="Enter name..."
+          class="text-sm rounded-lg w-full h-14 px-6 border border-neutral-400 transition duration-200 placeholder:text-neutral-400"
+        />
       </div>
-
-      <br />
 
       <!-- Message -->
-      <div>
-        <label for="msg-text">Message Text</label>
-        <textarea id="msg-text" name="msgText" rows="5" cols="30" placeholder="Enter text...">
-        </textarea>
+      <div class="flex flex-col gap-2 w-full md:w-1/2">
+        <label for="msg-text" class="text-sm text-neutral-700"
+          >Message Text</label
+        >
+        <textarea
+          id="msg-text"
+          name="msgText"
+          rows="5"
+          cols="30"
+          placeholder="Enter text..."
+          class="resize-none text-sm rounded-lg w-full px-6 py-4 border border-neutral-400 transition duration-200 placeholder:text-neutral-400"
+        ></textarea>
       </div>
 
-      <br />
-
       <!-- Submit -->
-      <button type="submit">Send</button>
+      <button
+        class="bg-blue-600 text-white text-sm rounded-lg px-6 h-14 w-full mt-4 w-auto transition duration-200 hover:bg-blue-500 focus:outline focus:outline-2 focus:outline-blue-600 focus:outline-offset-2 md:w-1/2"
+      >
+        Send
+      </button>
     </form>
   </body>
 </html>
