connect railway db to express app

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,11 +56,11 @@
       <li
         class="flex flex-col gap-6 bg-neutral-100 border border-neutral-300 rounded-xl shadow p-4 md:p-6"
       >
-        <p class="text-black font-semibold"><%= msg.text %></p>
+        <p class="text-black font-semibold"><%= msg.message %></p>
 
         <div class="flex items-center justify-between gap-4">
           <div class="text-sm text-neutral-500">
-            <p class="line-clamp-1"><%= msg.user %></p>
+            <p class="line-clamp-1"><%= msg.username %></p>
             <p class="line-clamp-1"><%= msg.added %></p>
           </div>
           <a
