--- a/views/single-message.ejs
+++ b/views/single-message.ejs
@@ -69,10 +69,10 @@
     </header>
 
     <div class="flex flex-col gap-6">
-      <h3 class="text-lg font-semibold md:text-xl"><%= message.text %></h3>
+      <h3 class="text-lg font-semibold md:text-xl"><%= message.message %></h3>
 
       <div class="text-sm text-neutral-500 md:text-base">
-        <h4><%= message.user %></h4>
+        <h4><%= message.username %></h4>
         <p><%= message.added %></p>
       </div>
     </div>
